--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,7 @@ DB_USER=your_db_user
 DB_PASSWORD=your_db_password
 DB_NAME=your_db_name
 DB_PORT=3306
+
+# Credenciais do administrador padrão
+ADMIN_EMAIL=email_do_admin@dominio.com
+ADMIN_PASSWORD=senha_forte_do_admin
