--- a/.gitignore
+++ b/.gitignore
@@ -66,6 +66,7 @@ htmlcov/
 
 # Script para popular o banco de dados com dados de teste
 seed_data.py
+seed.py
 
 # Script para gerar tokens JWT para testes locais
 gerar_tokens_teste.py
