--- a/.env.example
+++ b/.env.example
@@ -9,3 +9,6 @@ SECRET_KEY = "chave-muito-secreta"
 # Credenciais do administrador padrão
 ADMIN_EMAIL=email_do_admin@dominio.com
 ADMIN_PASSWORD=senha_forte_do_admin
+
+ALLOWED_ORIGINS=http://localhost:5173,http://localhost:3000
+VITE_API_BASE_URL=http://localhost:8000
